chore: update to new hammer version fix: sync issues with fluid storage, energy bar rendering